fixed about page and footer spacing and responsiveness

--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -34,38 +34,13 @@ nav {
   color: aqua;
 }
 
-/* .intro {
-  display: flex;
-  padding-top: 50px;
-  flex-wrap: wrap;
-} */
-
-/* @media (max-width: 767px) {
-  .intro {
-    flex-direction: column;
-  }
-} */
-
 .intro {
-  position: relative;
   color: white;
   width: 100%;
-  height: 100%;
 }
 
 .intro p {
-  position: absolute;
-  right: 3rem;
-  bottom: 5rem;
   text-align: right;
-}
-
-.about-paragraph {
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.7);
-  background-color: #00667a;
-  z-index: 1;
-  margin-right: 2rem;
-  margin-left: 2rem;
 }
 
 .projects {
@@ -103,15 +78,6 @@ nav {
 .github-link h3:hover {
   color: aqua;
 }
-
-/* .info-and-form {
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  list-style: none;
-} */
 
 .section-title {
   padding-left: 50px;
@@ -299,11 +265,20 @@ div.info-and-form {
 
 .footer-icons {
   display: flex;
+  flex: wrap;
   justify-content: space-evenly;
+}
+
+.footer-icons a {
+  padding: 2rem;
 }
 
 .footer-icons a svg:hover {
   fill: aqua;
+}
+
+.copyright {
+  text-align: right;
 }
 
 @media (max-width: 767px) {
